# LuaGraphicsPrototyper

./: CMakeLists.txt
lib/glad/: CMakeLists.txt  CMakeLists.txt.bak
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/lua/: CMakeLists.txt
src/: Application.cpp  Main.cpp  OpenGL.hpp
